dstar-gateway-core/tests/compile_fail/builder_missing_callsign.stderr
error[E0599]: no method named `build` found for struct `SessionBuilder<dstar_gateway_core::DExtra, Missing, Provided, Provided, Provided>` in the current scope
  --> tests/compile_fail/builder_missing_callsign.rs:18:28
   |
18 |     let _session = builder.build();
   |                            ^^^^^ method not found in `SessionBuilder<dstar_gateway_core::DExtra, Missing, Provided, Provided, Provided>`
   |
   = note: the method was found for
           - `SessionBuilder<P, Provided, Provided, Provided, Provided>`
